objects/Contract_Reservation_Service_Call_Log__c.object
<CustomObject>
    <description>Stores the request and response messages of the Contract Code Reservation Service integration.</description>
    <fields>
        <fullName>Contract_Code__c</fullName>
        <description>Tracks the contract code received as a response from the service.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Id__c</fullName>
        <description>Used to track the Implementation case ID from where this service call has been made.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Implementation Case Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Captures the product name of the respective QLI.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Item_ID__c</fullName>
        <description>Tracks the Quote Line Item from which the contract code reservation request has been sent.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote Line Item ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Message__c</fullName>
        <description>Tracks the JSON request body sent to Contract Reservation Service for each Quote Line Item.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Message__c</fullName>
        <description>Tracks the response from Contract Reservation Service callout.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Response Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Response_Code__c</fullName>
        <description>Tracks the response status code from Contract Code Reservation Service or HTTP response.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Response Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <description>Status of the response after making a call out to Contract Code Reservation service.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <description>Response Status after making a callout to Contract Code Reservation System.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <description>Transaction ID for the request sent.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Transaction ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Timestamp__c</fullName>
        <description>Stores the transaction timestamp from the request message.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Transaction Timestamp</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Contract Reservation Service Call Log</label>
    <nameField>
        <displayFormat>CRSLog-{000000}</displayFormat>
        <label>CRS Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Reservation Service Call Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>